<resources>
    <string name="app_name">DeepBookkeeping</string>
    <string name="title_home">Home</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_settings">Settings</string>
    <string name="category_income">收入</string>
    <string name="category_expense">支出</string>
    <string name="choose_date">选择日期</string>
    <string name="choose_time">选择时间</string>
    <string name="add_transaction">添加交易记录</string>
    <string name="remark">备注</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="amount">金额</string>
    <string name="statistic">统计</string>
    <string name="todayIncome">今日收入</string>
    <string name="todayExpense">今日支出</string>
    <string name="monthIncome">本月收入</string>
    <string name="monthExpense">本月支出</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transaction_detail_title">记账详情</string>
    <string name="confirm">确认</string>
    <string name="time">时间</string>
    <string name="type">类型</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="ai_chat">AI</string>
</resources>